--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=523C6B604119B2E66E34838F4051B7C9
+Description=Synth·Ètica is an experimental game done by witt with the use of AIs
+ProjectName=Synth·Ètica
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "FE6076B24ADF420B596A718C71373D44", "Synth·Ètica")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "6AE2829D4E7454097A9243A34CB7AFDC", "Synth·Ètica")
+
