--- a/SynthEtica.uproject
+++ b/SynthEtica.uproject
@@ -28,6 +28,15 @@
 			"SupportedTargetPlatforms": [
 				"Win64"
 			]
+		},
+		{
+			"Name": "VoxelFree",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/c61d1941c8664436be42d649404a10e0"
+		},
+		{
+			"Name": "SunPosition",
+			"Enabled": true
 		}
 	]
 }
